feat: new endpoint: bus stops
